--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "BOT_TOKEN": "",
+    "BOT_TOKEN": "MTM2MDg1ODgyNzIzODY3MDMzNg.Gft4YY.RpBSkvQIZD7g9FFQBJQS4UMQKnDUEivHJ-aIGE",
     "SPOTIPY_CLIENT_ID": "",
     "SPOTIPY_CLIENT_SECRET": "",
     "GEMINI_API_KEYS": [
