--- a/config.json
+++ b/config.json
@@ -1,34 +1,34 @@
 {
-    "BOT_TOKEN": "MTM2MDg1ODgyNzIzODY3MDMzNg.Gft4YY.RpBSkvQIZD7g9FFQBJQS4UMQKnDUEivHJ-aIGE",
+    "BOT_TOKEN": "",
     "SPOTIPY_CLIENT_ID": "",
     "SPOTIPY_CLIENT_SECRET": "",
     "GEMINI_API_KEYS": [
       
     ],
     "OWNER_ID": 877210657953566751,
-    "HUB_CHANNEL_ID": 1453906304925044738,
-    "TEMP_CHANNEL_CATEGORY_ID": 1437132778096431284,
-    "MOD_LOG_CHANNEL_ID": 1437132784237019137,
-    "LOCK_ROZ_CHANNEL_ID": 1437132767220600992,
+    "HUB_CHANNEL_ID": 1425173164903628840,
+    "TEMP_CHANNEL_CATEGORY_ID": 1376302562357280788,
+    "MOD_LOG_CHANNEL_ID": 1376312912293138543,
+    "LOCK_ROZ_CHANNEL_ID": 1371244750211911693,
     "MEMBER_ROLE_ID": 1437132767220600992,
     "STATUS_CHANNEL_ID": null,
-    "LOG_CHANNEL_ID": null,
-    "SEND_CHANNEL_ID": 1437055978100232322,
+    "LOG_CHANNEL_ID": 1437392061128249426,
+    "SEND_CHANNEL_ID": 1371244750211911693,
     "DASHBOARD_CHANNEL_ID": 1437056066855899287,
     "PUNISHMENT_ROLES": {
         "YOUR_ZERO_ROLE_ID": 1437130373254348851,
-        "YOUR_GREEN_ROLE_ID_1": 1437130372524806255,
-        "YOUR_GREEN_ROLE_ID_2": 1437130371547398185,
-        "YOUR_GREEN_ROLE_ID_3": 1437130370553217024,
-        "YOUR_YELLOW_ROLE_ID_1": 1437130369525616802,
-        "YOUR_YELLOW_ROLE_ID_2": 1437130368607326208,
-        "YOUR_YELLOW_ROLE_ID_3": 1437130367567007754,
-        "YOUR_RED_ROLE_ID_1": 1437130366140940490,
-        "YOUR_RED_ROLE_ID_2": 1437130364995899536
+        "YOUR_GREEN_ROLE_ID_1": 1423944915527930057,
+        "YOUR_GREEN_ROLE_ID_2": 1423945062617972746,
+        "YOUR_GREEN_ROLE_ID_3": 1423945157186687079,
+        "YOUR_YELLOW_ROLE_ID_1": 1423945238631813210,
+        "YOUR_YELLOW_ROLE_ID_2": 1423945369255149660,
+        "YOUR_YELLOW_ROLE_ID_3": 1423945442185707611,
+        "YOUR_RED_ROLE_ID_1": 1423945515694952449,
+        "YOUR_RED_ROLE_ID_2": 1423945628550955058
     },
     "AUTOROLE": {
-        "USER_ROLE_ID": 1437132768407453848,
-        "BOT_ROLE_ID": 1429564469205274654
+        "USER_ROLE_ID": null,
+        "BOT_ROLE_ID": null
     },
     "WEB_PANEL_URL": "https://botydiscord.unaux.com/?i=1",
     "RSS_FEED": {
@@ -46,7 +46,7 @@
       "IGNORE_ROLES": [1375555835463471226],
       "FORBIDDEN_WORDS": {
         "ENABLED": true,
-        "WORDS": ["niger", "nigger", "nigeria"],
+        "WORDS": [],
         "PUNISHMENT": {
           "ACTION": "KARA",
           "STREFA": "żółta",
